--- a/task-manager/config/dev.env
+++ b/task-manager/config/dev.env
@@ -1,1 +1,4 @@
 PORT=3000
+SENDGRID_API_KEY=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
+JWT_SECRET=thisIsASecret
+MONGODB_URL=mongodb://127.0.0.1:27017/task-manager-api
